test/files/neg/overloaded-implicit.check
overloaded-implicit.scala:4: warning: parameterized overloaded implicit methods are not visible as view bounds
  implicit def imp1[T](x: List[T]): Map[T, T] = Map()
               ^
overloaded-implicit.scala:5: warning: parameterized overloaded implicit methods are not visible as view bounds
  implicit def imp1[T](x: Set[T]): Map[T, T] = Map()
               ^
warning: 4 feature warnings; re-run with -feature for details
3 warnings
error: No warnings can be incurred under -Werror.
